# serializer version: 1
# name: TestTemplateRendering.test_constitution_agnostic_stack
  '''
  # testproj Constitution
  
  **Project**: testproj
  **Agent**: agnostic
  **Stack**: agnostic
  **Created**: 2026-03-14
  
  ## Core Principles
  
  ### I. Spec-First Development
  
  No code is written until `spec.md`, `plan.md`, and `tasks.md` exist for the feature.
  
  ### II. Architecture
  
  testproj follows Clean Architecture.
  ### III. Code Quality
  
  - Strict type hints on every function signature
  - Functions ≤ 30 lines; classes ≤ 200 lines
  - 100% unit test coverage for core domain logic
  
  ### IV. Testing
  
  Test files created before implementation files (TDD enforced).
  
  ## Version
  
  **Version**: 1.0.0 | **Ratified**: 2026-03-14
  
  '''
# ---
# name: TestTemplateRendering.test_constitution_template
  '''
  # myapp Constitution
  
  **Project**: myapp
  **Agent**: claude
  **Stack**: python
  **Created**: 2026-03-14
  
  ## Core Principles
  
  ### I. Spec-First Development
  
  No code is written until `spec.md`, `plan.md`, and `tasks.md` exist for the feature.
  
  ### II. Architecture
  
  myapp follows Clean Architecture. Stack: Python.
  ### III. Code Quality
  
  - Strict type hints on every function signature
  - Functions ≤ 30 lines; classes ≤ 200 lines
  - 100% unit test coverage for core domain logic
  
  ### IV. Testing
  
  Test files created before implementation files (TDD enforced).
  
  ## Version
  
  **Version**: 1.0.0 | **Ratified**: 2026-03-14
  
  '''
# ---
# name: TestTemplateRendering.test_gitignore_template
  '''
  # myapp — .gitignore
  # Auto-generated by SpecForge
  
  # Python
  __pycache__/
  *.pyc
  *.pyo
  .venv/
  venv/
  *.egg-info/
  dist/
  build/
  
  # Coverage & testing
  .coverage
  .pytest_cache/
  htmlcov/
  
  # Environment
  .env
  .env.*
  
  # OS
  .DS_Store
  Thumbs.db
  *.tmp
  *.swp
  
  '''
# ---
